--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1",
+    "node-persist": "^3.1.3",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   }
 }
